--- a/BMIF AS/index.html
+++ b/BMIF AS/index.html
@@ -21,7 +21,7 @@
       <a href="evse.html">EVSE</a>
       <a href="energy.html">ENERGY STORAGE</a>
       <a href="about.html">ABOUT</a>
-      <a href="contact.html">CONTACT</a>
+      <a href="contact.html">CONTACT...</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
 
